@@ -40,7 +40,8 @@ public:
 	void add_metadata (xmlpp::Node *) const;
 	void send_binary (boost::shared_ptr<Socket>) const;
 	/** @return true if our image is definitely the same as another, false if it is probably not */
-	virtual bool same (boost::shared_ptr<const ImageProxy>) const;
+	bool same (boost::shared_ptr<const ImageProxy>) const;
+	AVPixelFormat pixel_format () const;
 
 	Data j2k () const {
 		return _data;
@@ -53,9 +54,12 @@ public:
 private:
 	friend struct client_server_test_j2k;
 
+	/* For tests */
 	J2KImageProxy (Data data, dcp::Size size);
+	void ensure_j2k () const;
 
 	Data _data;
 	dcp::Size _size;
 	boost::optional<dcp::Eye> _eye;
+	mutable boost::shared_ptr<dcp::OpenJPEGImage> _j2k;
 };
