@@ -55,7 +55,7 @@ public:
 
 	void set_subtitle (PositionImage);
 
-	boost::shared_ptr<Image> image (AVPixelFormat pix_fmt, dcp::NoteHandler note) const;
+	boost::shared_ptr<Image> image (dcp::NoteHandler note) const;
 
 	void add_metadata (xmlpp::Node* node) const;
 	void send_binary (boost::shared_ptr<Socket> socket) const;
