@@ -81,3 +81,9 @@ RawImageProxy::same (shared_ptr<const ImageProxy> other) const
 
 	return (*_image.get()) == (*rp->image().get());
 }
+
+AVPixelFormat
+RawImageProxy::pixel_format () const
+{
+	return _image->pixel_format ();
+}
