@@ -32,6 +32,7 @@ public:
 	void add_metadata (xmlpp::Node *) const;
 	void send_binary (boost::shared_ptr<Socket>) const;
 	bool same (boost::shared_ptr<const ImageProxy>) const;
+	AVPixelFormat pixel_format () const;
 
 private:
 	boost::shared_ptr<Image> _image;
